--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "framer-motion": "^12.23.22",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
+    "mailgun.js": "^12.4.0",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
     "react": "^19.2.1",
@@ -65,7 +66,6 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
-
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
     "@types/express": "4.17.21",
